--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-
+<head>
+	<title>Home Page</title>
+</head>
+<body>
+	<h1>Home Page</h1>
+	<p>Welcome to Jeromy Swann's website!</p>
+</body>
 </html>
